I made the about me section on the page! There is currently a problem with the items on the page overlapping other items when the size of the web browser is reduced. Need to figure out how to solve that problem.

--- a/css/main.css
+++ b/css/main.css
@@ -90,3 +90,22 @@ body{
   font-size: 35px;
   font-family: 'Kaushan Script', cursive;
 }
+
+.aboutme{
+  height: 400px;
+  /*background: green;*/
+}
+
+.aboutme h1{
+  text-align: center;
+  font-family: 'Kaushan Script', cursive;
+  font-size: 45px;
+  margin-top: 70px;
+}
+
+.aboutme p {
+  width: 70%;
+  font-size: 24px;
+  text-align: center;
+  margin: auto;
+}
